--- a/trustnode.toml.example
+++ b/trustnode.toml.example
@@ -1,4 +1,4 @@
-https://wiki.parity.io/Configuring-Parity-Ethereum.html#config-file
+# doc: https://wiki.parity.io/Configuring-Parity-Ethereum.html#config-file
 
 [parity]
 chain = "spec.json"
@@ -6,7 +6,8 @@ base_path = "data"
 auto_update = "none"
 
 # name of your node
-identity = <PLACEHOLDER>
+# Example: identity = "random_guy"
+identity =
 
 [network]
 allow_ips = "public"
@@ -17,7 +18,8 @@ reserved_peers="bootnodes.txt"
 password = [ "password.txt" ]
 
 # address of your "mining key"
-unlock = [ <PLACEHOLDER> ]
+# Example: unlock = [ "0x8e1ca34f5718996f2531464f1323f959d8a8dd21" ]
+unlock = [  ]
 
 [mining]
 usd_per_tx = "0"
@@ -27,7 +29,8 @@ gas_floor_target = "8000000"
 reseal_on_txs = "none"
 
 # address of your "mining key"
-engine_signer = <PLACEHOLDER>
+# Example: engine_signer = "0x8e1ca34f5718996f2531464f1323f959d8a8dd21"
+engine_signer = 
 
 [misc]
 log_file = "parity.log"
