set min gas price to 1G

--- a/node.toml
+++ b/node.toml
@@ -10,6 +10,9 @@ auto_update = "none"
 # don't attempts to connect to non-public IPs (hosters do not like that)
 allow_ips = "public"
 
+[mining]
+min_gas_price = 1000000000
+
 [misc]
 log_file = "parity.log"
 
